[gd_scene load_steps=7 format=3 uid="uid://ckwhwkmjhulcn"]

[ext_resource type="Texture2D" uid="uid://bkoyq27ongkjx" path="res://Assets/Environment/background.png" id="1_lxfrx"]
[ext_resource type="PackedScene" uid="uid://cqvwh1k1opt0j" path="res://Scenes/DialogueSystem/dialogue_system.tscn" id="2_4hi6y"]
[ext_resource type="Script" path="res://Scenes/Intro/intro.gd" id="2_5jlv4"]
[ext_resource type="Texture2D" uid="uid://wc7xyco7ccd2" path="res://Assets/Entities/player.png" id="3_31h0v"]
[ext_resource type="Texture2D" uid="uid://bnrxnfp2ewyof" path="res://Assets/Entities/ra.png" id="4_pl23b"]
[ext_resource type="Texture2D" uid="uid://vclams5rgvv3" path="res://Assets/HUD/nextwave.png" id="5_55h10"]

[node name="Intro" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lxfrx")
expand_mode = 1
script = ExtResource("2_5jlv4")

[node name="Player" type="Sprite2D" parent="."]
visible = false
position = Vector2(192, 800)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_31h0v")

[node name="Ra" type="Sprite2D" parent="."]
visible = false
position = Vector2(1392, 784)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_pl23b")

[node name="ButtonBg" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1296.0
offset_top = 32.0
offset_right = 1565.0
offset_bottom = 112.0
texture = ExtResource("5_55h10")
expand_mode = 1

[node name="SkipButton" type="Button" parent="ButtonBg"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 68.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_font_sizes/font_size = 32
text = "SKIP INTRO"
flat = true

[node name="DialogueSystem" parent="." instance=ExtResource("2_4hi6y")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 200.0
grow_horizontal = 1
grow_vertical = 1
dialog_path = "res://Assets/Dialogs/intro.json"

[connection signal="pressed" from="ButtonBg/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="tree_exited" from="DialogueSystem" to="." method="_on_dialogue_system_tree_exited"]
